fix : overflow issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,8 +35,9 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100svh;
+  min-height: 100lvh;
   width: 100%;
+  max-width: 100vw;
   padding: 1rem;
 }
 
